# dbxml

./: buildall.sh
dbxml/: LICENSE  Makefile.am  Makefile.in  README  configure  configure.in
dbxml/build_windows/: All.dsp  BDBXML_all.dsw  BDBXML_all.dsw.template  BDBXML_all.sln  BDBXML_all.sln.template  BDBXML_all_vs8.sln  BDBXML_all_vs8.sln.template  app_dsp.src  bdbxml_msi.sln.template  compression.dsp  compression.vcproj  compression_vs8.vcproj  copyFiles.bat  copyFiles.bat.template  copyFiles7.bat  copyFiles7.bat.template  copyHeaders.bat  copyHeaders.bat.template  db.vcproj  db_archive.vcproj  db_archive_vs8.vcproj  db_checkpoint.vcproj  db_checkpoint_vs8.vcproj  db_deadlock.vcproj  db_deadlock_vs8.vcproj  db_dump.vcproj  db_dump_vs8.vcproj  db_hotbackup.vcproj  db_hotbackup_vs8.vcproj  db_java.vcproj  db_java_vs8.vcproj  db_load.vcproj  db_load_vs8.vcproj  db_printlog.vcproj  db_printlog_vs8.vcproj  db_recover.vcproj  db_recover_vs8.vcproj  db_stat.vcproj  db_stat_vs8.vcproj  db_tcl.vcproj  (+129 more)
dbxml/examples/: README  index.html
dbxml/examples/cxx/basic/: helloWorld.cpp  helloWorldTxn.cpp  query.cpp  queryTxn.cpp
dbxml/examples/cxx/gettingStarted/: Readme.txt  addIndex.cpp  buildDB.cpp  deleteDocument.cpp  deleteIndex.cpp  exampleLoadContainer.cpp  loadExamplesData.cmd  loadExamplesData.sh  queryForDocumentValue.cpp  queryForMetaData.cpp  queryWithContext.cpp  queryWithDocumentNames.cpp  replaceIndex.cpp  retrieveDB.cpp  simpleAdd.cpp  simpleContainer.cpp  simpleContainerInEnv.cpp  simpleQuery.cpp  updateDocument.cpp
dbxml/examples/cxx/misc/: compression.cpp  debug.cpp  externalFunction.cpp
dbxml/examples/cxx/xerces/: xercesDomTranslator.cpp  xercesDomTranslator.hpp
dbxml/examples/java/basic/: HelloWorld.java  HelloWorldTxn.java  Query.java  QueryTxn.java
dbxml/examples/java/event/: EventReaderToWriter.java  UseEventReaderToWriter.java
dbxml/examples/java/gettingStarted/: Readme.txt  addIndex.java  buildDB.java  deleteDocument.java  deleteIndex.java  exampleLoadContainer.java  mdConst.java  myDb.java  myDbEnv.java  queryForDocumentValue.java  queryForMetaData.java  queryWithContext.java  queryWithDocumentNames.java  replaceIndex.java  retrieveDB.java  simpleAdd.java  simpleContainerInEnv.java  simpleQuery.java  updateDocument.java
dbxml/examples/java/misc/: Compression.java  Debug.java  ExternalFunction.java  Profiler.java
dbxml/examples/perl/gettingStarted/: Readme.txt  deleteDocument.pl  exampleLoadContainer.pl  loadExamplesData.pl  queryForDocumentValue.pl  queryForMetaData.pl  retrieveDB.pl  (+5 more)
dbxml/examples/php/: 01.php  02.php  03.php  04.php  05.php  06.php  07.php  08.php  09.php  10.php  11.php  12.php  13.php  14.php  book1.xml  exceptionExample.php  php.ini
dbxml/examples/python/: examples.py
dbxml/include/dbxml/: DbXml.hpp  DbXmlFwd.hpp  XmlCompression.hpp  XmlContainer.hpp  XmlContainerConfig.hpp  XmlData.hpp  XmlDebugListener.hpp  XmlDocument.hpp  XmlEventReader.hpp  XmlEventReaderToWriter.hpp  XmlEventWriter.hpp  XmlException.hpp  XmlExternalFunction.hpp  XmlIndexLookup.hpp  XmlIndexSpecification.hpp  XmlInputStream.hpp  XmlManager.hpp  XmlMetaDataIterator.hpp  XmlNamespace.hpp  XmlPortability.hpp  XmlQueryContext.hpp  XmlQueryExpression.hpp  XmlResolver.hpp  XmlResults.hpp  XmlStatistics.hpp  XmlTransaction.hpp  XmlUpdateContext.hpp  XmlValue.hpp
dbxml/src/clib/: getopt.c
dbxml/src/common/: SigBlock.cpp  Timer.cpp  Timer.hpp  common_utils.h  dbxml_util_sig.c
dbxml/src/dbxml/: AtomicNodeValue.cpp  AtomicNodeValue.hpp  BaseInputStream.cpp  BaseInputStream.hpp  Buffer.cpp  Buffer.hpp  BulkPut.cpp  BulkPut.hpp  CacheDatabase.cpp  CacheDatabase.hpp  CacheDatabaseMinder.cpp  CacheDatabaseMinder.hpp  CompressionZlib.cpp  CompressionZlib.hpp  ConfigurationDatabase.cpp  ConfigurationDatabase.hpp  Container.cpp  Container.hpp  ContainerBase.cpp  ContainerBase.hpp  ContainerConfig.cpp  ContainerConfig.hpp  Counters.cpp  Counters.hpp  Cursor.cpp  Cursor.hpp  DatabaseNodeValue.cpp  DatabaseNodeValue.hpp  DbWrapper.cpp  DbWrapper.hpp  DbXmlInternal.cpp  DbXmlInternal.hpp  DbXmlXerces.hpp  DictionaryCache.cpp  DictionaryCache.hpp  DictionaryDatabase.cpp  DictionaryDatabase.hpp  DocID.cpp  DocID.hpp  Document.cpp  (+111 more)
dbxml/src/dbxml_dump/: dbxml_dump.cpp
dbxml/src/dbxml_load/: dbxml_load.cpp
dbxml/src/dbxml_perf/: PerfTest.java  test1.properties
dbxml/src/java/: dbxml_java_wrap.cpp  dbxml_java_wrap.h
dbxml/src/perl/: Changes  MANIFEST  META.yml  Makefile.PL  README  build.bat  common.h  config.in  config.win32  config.win32.in  config.win32d  config.win32d.in  perlwinbin.install  ppport.h  typemap  util
dbxml/src/php/: INSTALL.WINDOWS.txt  README  config.m4  config.m4.in  config.w32  php_dbxml.cpp  php_dbxml.h  php_dbxml_container.cpp  php_dbxml_containerconfig.cpp  php_dbxml_data.cpp  php_dbxml_document.cpp  php_dbxml_eventreader.cpp  php_dbxml_eventreadertowriter.cpp  php_dbxml_eventwriter.cpp  php_dbxml_exception.cpp  php_dbxml_indexlookup.cpp  php_dbxml_indexspecification.cpp  php_dbxml_inputstream.cpp  php_dbxml_int.hpp  php_dbxml_manager.cpp  php_dbxml_querycontext.cpp  php_dbxml_queryexpression.cpp  php_dbxml_resolver.cpp  php_dbxml_results.cpp  php_dbxml_statistics.cpp  php_dbxml_transaction.cpp  php_dbxml_updatecontext.cpp  php_dbxml_value.cpp
dbxml/src/python/: README  README.exceptions  README.in  dbxml.py  dbxml_python_wrap.cpp.tmp  dbxml_python_wrap.h  pywinbin.install  pywinbin.install.template  setup.py.in  setup.py.template
dbxml/src/tcl/: dbxml_tcl_wrap.cpp
dbxml/test/: cppTests.sh  dbxml_smoketest  xqts-errors.xml  xquts-errors.xml
dbxml/test/disk/: diskUtility.cpp
dbxml/test/java/: README.txt  TestConfig.java  XmlTestRunner.java  build.xml
dbxml/test/queries/: queries.xml
dbxml/test/tcl/: globals.tcl  include.tcl  run_tests.tcl  tcl_obj.tcl  test.tcl  xml002.tcl  xml003.tcl  xml006.tcl  xml006_utf8.tcl  xml008.tcl  xml009.tcl  xml010.tcl  xml011.tcl  xml012.tcl  xml013.tcl  xml014.tcl  xml014_globals.tcl  xml016.tcl  xml017.tcl  xmlparams.tcl  xmlshelltest.tcl  xmlutils.tcl
dbxml/test/updates/: updates.xml
(+4503 files in other folders)
